public class ClienteManaba extends ClienteConIvaEspecial {

	public ClienteManaba(String nombre, String cédula) {
		super(nombre, cédula, 0.08);
	}

}